<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:override="true">Mercator Puzzle</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiYWxleGFsMSIsImEiOiJjajJoenhoNHUwMDFwMnduc3BwcnZnaXM5In0.R5AyIbwsSA16udnbOzVzfQ</string>

    <string name="menu_new_game">New game</string>
    <string name="menu_results">My results</string>
    <string name="menu_feedback">Give feedback</string>

    <string name="top_bar_new_game">Choose a continent</string>
    <string name="top_bar_loading">Loading:\u00A0</string>

    <string name="continent_europe">Europe</string>
    <string name="continent_asia">Asia</string>
    <string name="continent_africa">Africa</string>
    <string name="continent_north_america">North America</string>
    <string name="continent_south_america">South America</string>
    <string name="continent_oceania">Oceania</string>

    <string name="continent_dialog_not_available">\u00A0is not available</string>
    <string name="continent_dialog_message">
        Only &lt;b>Europe&lt;/b> is available in beta version. Full functionality will be opened in
        the stable version release.
    </string>

    <string name="lap_fragment_button_menu">Menu</string>
    <string name="lap_fragment_button_skip">Skip</string>

    <string name="finish_fragment_button_menu">Menu</string>
    <string name="finish_fragment_button_results">Results</string>
    <string name="finish_fragment_title_done">\u00A0is done</string>
    <string name="finish_fragment_subtitle">Check your progress in \"My results\" menu</string>
    <string name="finish_fragment_countries">countries</string>
    <string name="finish_fragment_minutes">minutes</string>
    <string name="finish_fragment_coins">coins</string>

    <string name="results_activity_title">My Results</string>
    <string name="results_activity_minutes">minutes</string>
    <string name="results_activity_seconds">seconds</string>

    <string name="feedback_activity_title">Feedback</string>
    <string name="feedback_activity_url">https://goo.gl/forms/Ji074BAYZ6o4jTm73</string>

    <string name="feedback_dialog_title">Feedback time</string>
    <string name="feedback_dialog_message">Could you please fill in an anonymous poll?</string>
    <string name="feedback_dialog_no">Later</string>
    <string name="feedback_dialog_do_not_show">Don\'t show</string>
</resources>